<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
>
	<!-- ActionBar Normal Mode -->
	<LinearLayout
		style="@style/actionbar"
		android:id="@+id/actionbar_container"
	>
		<ImageButton
			style="@style/actionbar_left_button" 
			android:id="@+id/home_button"
			android:src="?attr/ic_home"
			android:contentDescription="@string/home"
		/>
		<TextView
			style="@style/actionbar_title" 
			android:id="@+id/title_textview"
			android:text="@string/view_note_title"
		/>
		<ImageButton
			style="@style/actionbar_right_button" 
			android:id="@+id/add_new_note_button"
			android:src="?attr/ic_add"
			android:contentDescription="@string/new_note"
		/>
		<ImageButton
			style="@style/actionbar_right_button" 
			android:id="@+id/delete_note_button"
			android:src="?attr/ic_delete"
			android:contentDescription="@string/delete_note"
		/>
		<ImageButton
			style="@style/actionbar_right_button" 
			android:id="@+id/edit_note_button"
			android:src="?attr/ic_edit"
			android:contentDescription="@string/edit_note"
		/>

	</LinearLayout>

	<!-- ActionBar Find Word Mode -->
	<LinearLayout
		style="@style/actionbar"
		android:id="@+id/find_word_mode_actionbar_container"
		android:visibility="gone"
	>
		<ImageButton
			style="@style/actionbar_left_button" 
			android:id="@+id/cancel_find_word_button"
			android:src="?attr/ic_ok"
			android:contentDescription="@string/ok"
		/>
		<EditText
			style="@style/actionbar_edittext" 
			android:id="@+id/find_word_edittext"
			android:hint="@string/find_word_hint"
			android:inputType="text"
			android:singleLine="true"
			android:imeOptions="actionSearch"
		/>
		<ImageButton
			style="@style/actionbar_right_button" 
			android:id="@+id/find_prev_button"
			android:src="?attr/ic_prev"
			android:contentDescription="@string/prev"
		/>
		<ImageButton
			style="@style/actionbar_right_button" 
			android:id="@+id/find_next_button"
			android:src="?attr/ic_next"
			android:contentDescription="@string/next"
		/>
	</LinearLayout>

	<!-- body -->
	<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<include layout="@layout/note_detail_view" />
		<include layout="@layout/note_detail_edit" />
	</FrameLayout>

</LinearLayout>