<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
			  android:orientation="vertical"
>
	<!-- ActionBar Normal Mode -->
	<LinearLayout
		style="@style/actionbar" 
		android:id="@+id/actionbar_container"
	>
		<ImageButton
			style="@style/actionbar_left_button" 
			android:id="@+id/home_button"
			android:src="?attr/ic_home"
			android:contentDescription="@string/home"
		/>
		<TextView
			style="@style/actionbar_title"
			android:id="@+id/title_textview"
			android:text="@string/note_list_title"
		/>
		<ImageButton
			style="@style/actionbar_right_button" 
			android:id="@+id/search_button"
			android:src="?attr/ic_search"
			android:contentDescription="@string/search_note"
		/>
		<ImageButton
			style="@style/actionbar_right_button" 
			android:id="@+id/add_new_note_button"
			android:src="?attr/ic_add"
			android:contentDescription="@string/new_note"
		/>

	</LinearLayout>

	<!-- ActionBar Search Mode -->
	<LinearLayout
		style="@style/actionbar"
		android:id="@+id/search_mode_actionbar_container"
		android:visibility="gone"
	>
		<ImageButton
			style="@style/actionbar_left_button" 
			android:id="@+id/cancel_search_button"
			android:src="?attr/ic_ok"
			android:contentDescription="@string/ok"
		/>

		<EditText
			style="@style/actionbar_edittext" 
			android:id="@+id/search_edittext"
			android:hint="@string/search_note_hint"
			android:inputType="text"
			android:imeOptions="actionSearch"
		/>
		<ImageButton
			style="@style/actionbar_right_button" 
			android:id="@+id/clear_search_word_button"
			android:src="?attr/ic_clear"
			android:contentDescription="@string/clear"
		/>
	</LinearLayout>

	<include layout="@layout/note_list" />

</LinearLayout>
