<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
>
	<LinearLayout style="@style/actionbar" >
		<ImageButton
			style="@style/actionbar_left_button" 
			android:id="@+id/home_button"
			android:src="?attr/ic_home"
			android:contentDescription="@string/home"
		/>
		<TextView
			style="@style/actionbar_title" 
			android:id="@+id/title_textview"
			android:text="@string/note_template_list_title"
		/>
		<ImageButton
			style="@style/actionbar_right_button" 
			android:id="@+id/add_new_note_template_button"
			android:src="?attr/ic_add"
			android:contentDescription="@string/new_note"
		/>
	</LinearLayout>

	<include layout="@layout/note_template_list" />

</LinearLayout>
